[gd_scene load_steps=2 format=2]

[ext_resource path="res://Puzzle/Interface/GerenciadorDeBloco/GerenciadorDeBloco.gd" type="Script" id=1]

[node name="GerenciadorDeBloco" type="VBoxContainer"]
margin_right = 136.0
margin_bottom = 164.0
script = ExtResource( 1 )

[node name="AddTask" type="Button" parent="."]
margin_right = 136.0
margin_bottom = 20.0
text = "Adicionar Comando"

[node name="TaskList" type="GridContainer" parent="."]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 164.0
size_flags_vertical = 3

[connection signal="pressed" from="AddTask" to="." method="_on_AddTask_pressed"]
